--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a href="http://krystalrios.com">krystalrios.com</a>.</p>
 
-        <!-- Copy the whole <section> block to add more projects. -->
         <section>
           <h3>Flaka's Safe Space</h3>
           <img src="placeholder images/annie-spratt-unsplash.jpg" alt="serenity">
@@ -32,14 +31,12 @@
         </p>
           <a href="fss.com" target="_blank">View Project</a>
         </section>
-        <!-- End of Project block. -->
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section><hr id="work">
         <h2>Work Experience</h2>
 
-        <!-- Copy this whole <section> block to add more jobs. -->
         <section>
           <h3>Stamper</h3>
           <p>PFG Core Mark</p>
@@ -50,34 +47,28 @@
             operating a stamp machine and implement basic trouble shooting skills related to the machinery.
           </p>
         </section>
-        <!-- End of Job block. -->
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section><hr id="edu">
         <h2>Education</h2>
 
-        <!-- Copy this whole <section> block to add more schools. -->
         <section>
           <h3>Wake Technical Community College - Raleigh, NC</h3>
           <p>Associates in Arts: Major in Psychology - 2020</p>
           <p>●  Dean’s List - Summer 2020<br>
             ●  President’s List - Fall 2020</p>
         </section>
-        <!-- End of School block. -->
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer><hr>
         <h2>Let's Keep in Touch!</h2>
 
-        <!-- Social media and contact links. Add or remove any networks. -->
+        <!-- I don't use social media. Ironic, right? -->
         <ul>
-          <li><a href="mailto:email@example.com">dkrios@my.waketech.edu</a></li>
+          <li><a href="mailto:dkrios@my.waketech.edu">dkrios@my.waketech.edu</a></li>
           <li><a href="http://krystalrios.com" target="_blank">krystalrios.com</a></li>
-          <li><a href="#" target="_blank">Twitter</a></li>
-          <li><a href="#" target="_blank">LinkedIn</a></li>
-          <li><a href="#" target="_blank">Facebook</a></li>
         </ul>
       </footer>
     </main>
