--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
         <section>
           <h3>Flaka's Safe Space</h3>
-          <img src="placeholder images/annie-spratt-unsplash.jpg" alt="serenity">
-          <p>Flaka's Safe Space is a community where everyone is welcome. A shelter from those in abusive households and relationships.<br>
-          A place for those that feel like they're misunderstood or have nowhere to go. We are mental health advocates and promote mental health awareness.<br>
-          Our focus is creating a safe place for those in the LGBT community but we are an inclusive organization that cares for everyone.<br>
+          <img src="images/annie-spratt-unsplash.jpg" alt="serenity">
+          <p id="fss">Flaka's Safe Space is a community where everyone is welcome. A shelter from those in abusive households and relationships.
+          A place for those that feel like they're misunderstood or have nowhere to go. We are mental health advocates and promote mental health awareness.
+          There are various pages explaining what mental illness there are, information on them, and support others dealing with them. Inspired by the <a href="https://www.thetrevorproject.org/" target="_blank">Trevor Project</a>,
+          our focus is creating a safe place for those in the LGBT community but we are an inclusive organization that cares for everyone.
           We are a shoulder to cry on, a hand to hold, and more. 
-        </p>
-          <a href="fss.com" target="_blank">View Project</a>
+          <a href="fss.com" target="_blank">View Project</a></p>
         </section>
       </section>
 
@@ -39,13 +39,11 @@
 
         <section>
           <h3>Stamper</h3>
-          <p>PFG Core Mark</p>
-          <p>November 2022 - Now</p>
-          <p>Stamping workers are responsible for affixing state, county, and city tax stamps to individual packs of cigarettes as well<br>
-            as storing of stamped packs of cigarettes are on cigarette racks. Stampers must also stamp cigarette packs and record product movement using handheld devices.<br>
-            Other duties include, performing system and physical material movements from one bin to another, using basic SAP skills such as material look up and bin to bin movements, and
-            operating a stamp machine and implement basic trouble shooting skills related to the machinery.
-          </p>
+          <p>PFG Core Mark    ||    November 2022 - Now</p>
+          <p>Stamping workers are responsible for affixing state, county, and city tax stamps to individual packs of cigarettes as well as storing of stamped packs of cigarettes are on cigarette racks.
+            Stampers must also stamp cigarette packs and record product movement using handheld devices. Other duties include, performing system and physical material movements from one bin to another,
+            using basic SAP skills such as material look up and bin to bin movements, and operating a stamp machine and implement basic trouble shooting skills related to the machinery.
+          </p><br>
         </section>
       </section>
 
@@ -56,19 +54,23 @@
         <section>
           <h3>Wake Technical Community College - Raleigh, NC</h3>
           <p>Associates in Arts: Major in Psychology - 2020</p>
-          <p>●  Dean’s List - Summer 2020<br>
-            ●  President’s List - Fall 2020</p>
+          <p>Associate in Applied Science: Major in Web Development & Design - Current</p>
+          <p>Dean’s List - Summer 2020    ||       President’s List - Fall 2020</p>
         </section>
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer><hr>
-        <h2>Let's Keep in Touch!</h2>
+        <h2 id="footer">Let's Keep in Touch!</h2>
 
         <!-- I don't use social media. Ironic, right? -->
         <ul>
-          <li><a href="mailto:dkrios@my.waketech.edu">dkrios@my.waketech.edu</a></li>
-          <li><a href="http://krystalrios.com" target="_blank">krystalrios.com</a></li>
+          <li><a href="mailto:dkrios@my.waketech.edu">
+            <img id="outlook" src="images/outlook.png" alt="outlook logo">
+          </a></li>
+          <li><a href="http://krystalrios.com" target="_blank">
+            <img id="home" src="images/home.png" alt="home">
+          </a></li>
         </ul>
       </footer>
     </main>
